# MangaDownloader

./: .gitignore  .gitmodules  README.md  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
cli/: main.py  main.spec  sheller.py  sheller.spec
mui/: package-lock.json  package.json
mui/public/: index.html  splash.css  splash.html
mui/src/: App.css  App.js  NotificationProvider.js  downloadWorker.js  index.css  index.js  worker.js
mui/src/api/: download_image.js  get_chapters.js  get_images.js  get_info.js  get_library.js  get_logo.js  get_module_type.js  get_modules.js  search.js  utils.js  webtoon.js
mui/src/components/: ChapterBotton.js  ChapterButton.css  CrushedButton.js  DCard.css  DCard.js  Doujin.js  Downloaded.js  FavoriteWebtoon.js  FilterToggleButton.js  FlipButton.js  HomeButton.js  Loading.js  Manga.js  ModuleChecker.js  Notification.js  PushButton.js  QCard.js  Queue.js  QueueCard.css  QueueCard.js  Rating.js  SaucerResult.js  SearchBar.js  SearchFilter.js  SideBar.js  TopBar.js  WSearchCard.js  Webtoon.css  extras.js  infoed.js  moduleCard.js  utils.js  webtoonCard.css  webtoonCard.js
mui/src/pages/: About.js  Download.css  Download.js  Favorites.js  Home.js  Library.js  Module.js  Modules.js  Queue.css  Queue.js  Saucer.js  Search.js  Settings.js  Webtoon.js  home.css
mui/src/styles/: About.css  CrushedButtton.css  DCard.css  FavoriteWebtoon.css  FilterButton.css  FilterToggleButton.css  FlipButton.css  HomeButton.css  ModuleChecker.css  PushButton.css  Saucer.css  Search.css  SearchBar.css  SearchFilter.css  Settings.css  SideBar.css  Topbar.css  WSearchCard.css  Webtoon.css  infoed.css  loading.css  moduleCard.css  webtoonCard.css
public/: index.html  splash.css  splash.html
src/: App.css  App.js  NotificationProvider.js  Provider.js  ShellerProvider.js  index.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/modules/: Cargo.toml  cargo.toml
src-tauri/modules/.cargo/: config.toml
src-tauri/modules/src/: errors.rs  lib.rs  macros.rs  models.rs  module_contributer.rs  prelude.rs  types.rs
src-tauri/modules/src/modules/: hentaifox.rs  imhentai.rs  luscious.rs  mangapark.rs  manhuascan.rs  manytoon.rs  mod.rs  nhentai_net.rs  nhentai_xxx.rs  nyahentai.rs  readonepiece.rs  simplyhentai.rs  toonily_com.rs  truemanga.rs
src-tauri/src/: assets.rs  commands.rs  download_worker.rs  downloader.rs  errors.rs  image_merger.rs  lib.rs  lib_utils.rs  main.rs  models.rs  modules.rs  pdf_converter.rs  prelude.rs  saucer.rs  search_worker.rs  searcher.rs  sheller.rs  sheller_updater.rs  types.rs
src-tauri/src/modules/: hentaifox.rs  imhentai.rs  luscious.rs  mangapark.rs  manhuascan.rs  nhentai_net.rs  nhentai_xxx.rs  readonepiece.rs  simplyhentai.rs  toonily_com.rs  truemanga.rs
src/components/: ChapterBotton.js  ChapterButton.js  CheckBox.js  DCard.js  Doujin.js  Doujin.jsx  DownloadPathModal.js  Downloaded.js  Downloaded.jsx  FavoriteWebtoon.js  FilterButton.js  FilterToggleButton.js  FlipButton.js  HomeButton.js  Infoed.js  Infoedte.js  Loading.js  Manga.js  Manga.jsx  Media.js  Media.jsx  ModuleCard.js  ModuleChecker.js  Notification.js  NotificationProvider.js  NotificationProvider.jsx  QCard.js  Queue.js  Queue.jsx  Rating.js  SaucerResult.js  SearchBar.js  SearchFilter.js  SideBar.js  SideBar.jsx  StepsCircle.js  StepsCircle.jsx  TopBar.js  TopBar.jsx  WSearchCard.js  (+6 more)
src/components/buttons/: ActionButton.js  ActionButtons.js  ChapterButton.js  DownloadButton.js  ExpandButton.js  ExpandButton.jsx  FavoriteButton.js  FavoriteButton.jsx  FilterButton.js  FilterToggleButton.js  FilterToggleButton.jsx  FlipButton.jsx  HomeButton.js  HomeButton.jsx  PushButton.jsx  SideBarButton.jsx  index.js
src/components/cards/: DCard.js  DCard.jsx  FavoriteWebtoonCard.jsx  ModuleCard.js  QCard.js  QCard.jsx  SaucerResultCard.jsx  WSearchCard.js  WSearchCard.jsx  WebtoonCard.js  index.js
src/components/modals/: AddToLibraryModal.js  DownloadPathModal.js  DownloadPathModal.jsx  ModuleCheckerModal.js  ModuleCheckerModal.jsx  ModuleSearchModal.js  SearchFilterModal.js  index.js
src/operators/: downloader.js  index.js  moduleChecker.js  saucer.js  searcher.js
src/pages/: About.js  About.jsx  Download.js  Favorites.js  Home.js  Home.jsx  Library.js  Library.jsx  Module.js  Modules.js  Saucer.js  Search.js  Search.jsx  Settings.js  Webtoon.js  Webtoon.jsx  index.js
src/store/: dataStore.js  index.js  messagesStore.js  store.js
src/styles/: About.css  App.css  ChapterButton.css  DCard.css  Download.css  DownloadCard.css  FavoriteWebtoon.css  FilterButton.css  FilterToggleButton.css  FlipButton.css  Home.css  HomeButton.css  Loadingte.css  Module.css  ModuleCard.css  ModuleChecker.css  PushButton.css  QCard.css  Queue.css  Saucer.css  Search.css  SearchBar.css  SearchFilter.css  Settings.css  SideBar.css  StdButton.css  StepsCircle.css  Topbar.css  WSearchCard.css  Webtoon.css  WebtoonCard.css  colors.css  index.css  infoed.css  moduleCard.css  webtoonCard.css
src/utils/: assets.js  constants.js  etc.js  index.js  invokers.js  tauri-utils.js
