[package]
name = "mangadownloader"
version = "1.0.0"
description = "An app to download manga"
authors = ["YofaGh"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = ["modules"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scannedpdf = "0.1.0"
libloading = "0.8.6"
lazy_static = "1.5.0"
rayon = "1.10.0"
natord = "1.0.9"
semver = "1.0.24"
reqwest = { version = "0.12", default-features = false, features = [
    "multipart",
    "json",
    "stream",
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
] }
select = "0.6.0"
indexmap = { version = "2.7.0", features = ["serde"] }
image = "0.24.5"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
