[package]
name = "modules"
version = "1.0.3"
edition = "2021"
description = "modules for Manga Downloader"
authors = ["YofaGh"]
license = ""
repository = ""
rust-version = "1.83"

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "multipart",
] }
select = "0.6.0"
base64 = "0.22.1"
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"
async-trait = "0.1.80"
chrono = "0.4.38"
indexmap = { version = "2.5.0", features = ["serde"] }
